[metadata]
name = Route Calculation
author = Eva Girondeau
author_email = eva.girondeau23@gmail.com
maintainer = Eva Girondeau, Etienne Tachouzin
maintainer_email = eva.girondeau23@gmail.com, etienne.tachouzin64@gmail.com
description_file = README.rst
home_page = https://github.com/egirondeau/route-calculation
license = MIT
version = 0.0.1
keywords =
    route
    calculation
    gps
    dijkstra

[options]
python_requires = >= 3.7
package_dir =
        = src

[options.entry_points]
console_scripts =
    route_calculation = route_calculation.click:main

[files]
packages =
    route_calculation

[pbr]
skip_changelog = 1

[bdist_wheel]
universal = 1



